# stock-computing-service

./: Dockerfile  README.md  ci-test-requirements.txt  codecov.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: ci-tests.yml  docker-push.yml  publish.yml
infra/: Pulumi.dev.yaml  Pulumi.yaml  README.md  __init__.py  __main__.py  cluster.py  constants.py  deployment.py  helper.py  models.py  requirements.txt
infra/k8-configs/: postgres-deploy.yaml  postgres-service.yaml  stock-computing-deploy.yaml  stock-computing-service.yaml
infra/src/: cluster.py  deployment_service.py  misc.py  models.py
stock_computing_service/: constants.py  database.py  main.py  sync.py
stock_computing_service/extract/: api_wrapper.py  extract.py
stock_computing_service/statistics/: model.py
stock_computing_service/transform/: __init__.py  transform.py
tests/: conftest.py  test_extract.py  test_load.py  test_statistics.py  test_transform.py
tests/resource/: sample_response.json
